Break apart ball movement and player movement. Have runPlay return field state

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Lacrosse Playbook",
+  "name": "lacrosse-playbook",
   "version": "1.0.0",
   "description": "Lacrosse Playbook",
   "main": "build/main/index.js",
